[package]
name = "resp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
resp = { path = "../resp" }
bytes = "1.10.1"
env_logger = { workspace = true }
log = { workspace = true }
futures = "0.3.31"
parking_lot = "0.12.3"
tokio = {version = "1.45.1", features = ["full"]}
tokio-util = {version = "0.7.15", features = ["full"]}
tokio-stream = {version = "0.1.17", features = ["full"]}
